# didcomm-python

./: .flake8  README.md  pyproject.toml
.github/workflows/: release.yml  verify.yml
didcomm/: message.py  pack_encrypted.py
didcomm/core/: defaults.py  utils.py
didcomm/protocols/routing/: forward.py
tests/test_vectors/: test_utils.py
tests/test_vectors/did_doc/: __init__.py
tests/test_vectors/secrets/: __init__.py
tests/unit/: conftest.py
tests/unit/didcomm/protocols/routing/: helper.py  test_did_service_helpers.py  test_forward_message.py
