[tool.poetry]
name = "didcomm"
version = "0.3.3"
description = "Basic DIDComm v2 support in python"
authors = ["SICPA <DLCHOpenSourceContrib@sicpa.com>", "Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sicpa-dlab/didcomm-python"
repository = "https://github.com/sicpa-dlab/didcomm-python"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
include = [
    "LICENSE",
    "README.md"
]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
Authlib = "^1.1.0"
pycryptodomex = "~=3.10"
base58 = "~=2.1"
varint = "~=1.0.2"
attrs = ">=25.4.0,<26.0.0"
packaging = "~=23.0"
pydid = "^0.5.2"
pydantic = ">=2.7.0,<3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-xdist = "^3.8.0"
flake8 = "^7.3.0"
black = ">=26.1.0,<27.0.0"
pytest-mock = "^3.15.1"
mock = "^5.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
mock_use_standalone_module = true
addopts = "-n auto"
